# career-weaver

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/data/: README.md
examples/data/alex_chen/: profile.yaml
examples/data/alex_chen/jds/: engineering_manager_platform.txt  ml_platform_engineer.txt  platform_engineer_observability.txt  senior_backend_engineer.txt  tech_lead.txt
examples/data/guillaume_ouancaux/: profile.yaml
skill/: SKILL.md
skill/agents/: openai.yaml
skill/assets/templates/businessinsider/: businessinsider.txt
skill/assets/templates/common/: developercv.cls  developercv.txt
skill/assets/templates/engineer/: engineer.tex.jinja2  engineer_with_photo.tex.jinja2  engineer_with_photo.txt
skill/assets/templates/luxsleek/: luxsleek.tex.jinja2  luxsleek.txt
skill/assets/templates/resume_cv/: resume_cv.txt
skill/references/: importing.md  interview_prep.md  localization.md  report_schema.md  resume_schema.md  templates.md  workflow.md
skill/scripts/: render_resume.py  setup_workflow.py
